# nnm

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
docs/: reference.md  reference_geom.md  reference_geom2.md  reference_geom3.md
include/nnm/: geom.hpp  geom2.hpp  geom3.hpp  nnm.hpp
tests/: geom2_tests.cpp  geom2_tests.hpp  geom3_tests.cpp  geom3_tests.hpp  geom_tests.hpp  main.cpp  nnm_tests.hpp  test.cpp  test.hpp
